--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
           <!-- Begin Personal Information -->
           <div class="self">
             <h1 class="name">Boutine Adel <br />
-              <span>Interactive Designer</span></h1>
+              <span>Independent Security Consultant</span></h1>
             <ul>
-              <li class="ad">111 Lorem Street, 34785, Ipsum City</li>
-              <li class="mail">johnsmith@business.com</li>
-              <li class="tel">+11 444 555 22 33</li>
-              <li class="web">www.businessweb.com</li>
+              <li class="mail">contact@ooscyber.com</li>
+              <li class="web">https://www.ooscyber.com</li>
+	      <li class="web">https://www.oossecurity.com</li>
             </ul>
           </div>
           <!-- End Personal Information -->
