--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
           <h2>EXPERIENCE</h2>
           <div class="content">
             <h3>2014 - 2016</h3>
-            <p>Black Hat <br />
-              <em>http://attacker.work/archive/attacker/44/ "Hacked By oos"</em></p>
+            <p>Black Hat community<br />
+              <em>"Hacked By oos"</em>
+	     <li class="web">http://attacker.work/archive/attacker/44/</li></p>
             <ul class="info">
               <li>Vestibulum eu ante massa, sed rhoncus velit.</li>
               <li>Pellentesque at lectus in <a href="#">libero dapibus</a> cursus. Sed arcu ipsum, varius at ultricies acuro, tincidunt iaculis diam.</li>
