--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li><a class='north' href="javascript:window.print()" title="Print"><img src="images/icn-print.jpg" alt="" /></a></li>
               <li><a class='north' id="contact" href="contact/index.html" title="Contact Me"><img src="images/icn-contact.jpg" alt="" /></a></li>
               <li><a class='north' href="https://twitter.com/OOS_Cyber" title="Follow me on Twitter"><img src="images/icn-twitter.jpg" alt="" /></a></li>
-              <li><a class='north' href="#" title="My Facebook Profile"><img src="images/icn-facebook.jpg" alt="" /></a></li>
+              <li><a class='north' href="https://hackerone.com/oos" title="Follow me on Hackerone"><img src="images/h1.png" alt="" /></a></li>
             </ul>
           </div>
           <!-- End Social -->
